solving bugs of docker-compose and entrypoint.sh

--- a/.env.dev
+++ b/.env.dev
@@ -5,5 +5,6 @@ SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=djangobnb
 SQL_USER=postgresuser
 SQL_PASSWORD=postgrespassword
-SQL_HOSTS=db
+SQL_HOST=db
 SQL_PORT=5432
+DATABASE=postgres
